# actix-pura

./: .gitignore  .gitmodules  @oms.md  ACTOR_REGISTRY_CACHE.md  BUILD_SUCCESS.md  Cargo.toml  build-core.ps1  cluster.md  cluster1.md  dataflare4.md  dataflare_500k_complete_test.bat  dataflare_performance_report.md  etl.md  etl.md.zh.md  generate_test_data.ps1  notepad  notepad.md  oms.md  performance_test.ps1  performance_test.sh  performance_test_500k.bat  performance_test_simple.ps1  plan-akka.md  plugin.md  run_500k_test.bat  run_cli_500k_test.bat  simple_benchmark.py  test_500k_performance.bat  xf001.md
actix/: README.md
actix-cluster/: Cargo.toml  PERFORMANCE_TESTING.md  SERIALIZATION.md  build.rs
actix-cluster/docs/: supervision.md
actix-cluster/examples/: advanced_benchmark.rs  cluster_benchmark.rs  compression_example.rs  compression_test.rs  direct_benchmark.rs  distributed_benchmark.rs  libp2p_cluster.rs  local_affinity_example.rs  message_compression_demo.rs  minimal_benchmark.rs  multi_actor_benchmark.rs  multi_node_benchmark.rs  protobuf_serialization.rs  simple_benchmark.rs  simple_node_benchmark.rs  simple_performance_test.rs  simple_validate.rs  supervised_actor.rs  validate_cluster.rs
actix-cluster/examples/api_optimization/: main.rs
actix-cluster/proto/: messages.proto
actix-cluster/src/: actor.rs  broker.rs  cluster.rs  cluster_new.rs  compression.rs  config.rs  consensus.rs  consensus_handler.rs  consensus_network.rs  discovery.rs  error.rs  lib.rs  master.rs  migration.rs  node.rs  placement.rs  registry.rs  serialization.rs  supervision.rs  testing.rs  transport.rs  transport_trait.rs
actix-cluster/src/message/: delivery.rs  envelope.rs  handler.rs  mod.rs  tests.rs
actix-cluster/src/proto/: messages.proto  mod.rs
actix-cluster/src/security/: mod.rs
actix-cluster/src/serialization/: protobuf.rs
actix-cluster/src/sync/: mod.rs
actix-cluster/tests/: actor_migration_test.rs  consensus_test.rs  distributed_actor_registry_test.rs  message_compression_test.rs  message_handler_test.rs  network_broker_test.rs  network_integration_test.rs  network_transport_test.rs  placement_strategy_test.rs  placement_strategy_tests.rs  pluggable_transport_test.rs  remote_actor_communication_test.rs  remote_messaging_test.rs  standalone_placement_test.rs  transport_trait_test.rs
dataflare/: Cargo.toml  README.md  WASM_ARCHITECTURE_SUMMARY.md  WASM_IMPLEMENTATION_ROADMAP.md  WASM_MIGRATION_COMPLETE.md  performance.md  performance_analysis.txt  performance_summary.md  plan4.md  plan5.md
dataflare-cli/: Cargo.toml
dataflare-cli/src/: lib.rs  main.rs
dataflare-edge/: Cargo.toml
dataflare-edge/src/: lib.rs
dataflare-edge/src/cache/: mod.rs
dataflare-edge/src/resource/: mod.rs
dataflare-edge/src/sync/: mod.rs
dataflare-plugin/: Cargo.toml
dataflare-plugin/src/: lib.rs
dataflare-plugin/src/plugin/: mod.rs
dataflare-plugin/src/registry/: mod.rs
dataflare-plugin/src/sandbox/: mod.rs
dataflare-plugin/src/wasm/: mod.rs
dataflare-runtime/: Cargo.toml
dataflare-runtime/src/: lib.rs
dataflare-runtime/src/actor/: destination.rs  mod.rs  processor.rs  source.rs  supervisor.rs  workflow.rs
dataflare-runtime/src/executor/: mod.rs
dataflare-runtime/src/workflow/: builder.rs  executor.rs  mod.rs  parser.rs  yaml_parser.rs
dataflare/bench/: batch_benchmark.rs  postgres_batch_benchmark.rs  run_benchmarks.sh  simple_benchmark.rs  simple_core_benchmark.rs  test_benchmark.rs
dataflare/benches/: dataflare_benchmarks.rs
dataflare/cli/: Cargo.toml
dataflare/cli/src/: lib.rs  main.rs  workflow_executor.rs
dataflare/cloud/: Cargo.toml
dataflare/connector/: Cargo.toml
dataflare/connector/src/: factory.rs  lib.rs  util.rs
dataflare/core/: Cargo.toml
dataflare/core/src/: error.rs  lib.rs  message.rs
dataflare/docs/: batch_system.md  plan2.md  plan3.md  plan5.md  runtime.md  runtime_architecture.md  runtime_implementation_plan.md  yaml_workflow.md
dataflare/edge/: Cargo.toml
dataflare/examples/: actor_connection_example.rs  aggregate_workflow.rs  cdc_workflow.rs  csv_connector_test.rs  csv_destination_example.rs  csv_etl_direct.rs  csv_reader.rs  csv_test.rs  csv_writer.rs  direct_csv_test.rs  enrichment_workflow.rs  incremental_workflow.rs  performance_test.rs  progress_callbacks.rs  simple_workflow.rs  wasm_plugin.rs  workflow_cli.rs  workflow_connection_test.rs  workflow_template.rs  workflow_test.rs  yaml_workflow.rs
dataflare/examples/data/: output.csv  performance_test_sample.csv  transformed_output.csv
dataflare/examples/templates/: postgres_to_elasticsearch.yaml
dataflare/examples/workflows/: cdc_workflow.yaml  csv_destination_workflow.yaml  csv_etl_workflow.yaml  csv_workflow.yaml  (+3 more)
dataflare/output/: cli_validation_output.csv  medium_output.csv  small_output.csv
dataflare/plugin/: Cargo.toml  README.md  STAGE2_PERFORMANCE_SUMMARY.md  USAGE_GUIDE.md
dataflare/processor/: Cargo.toml
dataflare/runtime/: Cargo.toml
dataflare/src/: config.rs  error.rs  lib.rs  message.rs  plugin.rs  processor.rs  registry.rs  schema.rs  state.rs
dataflare/state/: Cargo.toml
dataflare/tests/: performance_optimization_test.rs  plugin_architecture_test.rs  wasm_plugin_test.rs
dataflare/wasm/: Cargo.toml  ENTERPRISE_TRANSFORMATION.md  IMPLEMENTATION_SUMMARY.md  README.md  WASM_ECOSYSTEM_PLAN.md  WASM_IMPLEMENTATION_SUMMARY.md  et.md  plot.md  plugin2.md  plugin3.md  wasm.md
examples/chat_system/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/distributed_benchmark/: Cargo.toml  README.md
examples/http_api/: Cargo.toml  README.md
standalone_bench/: Cargo.toml
standalone_bench/src/: main.rs
trading/: Cargo.toml  perf_test_report_5nodes_100000orders_20250402_163423.json  perf_test_report_5nodes_100000orders_20250402_164106.json  perf_test_summary_5nodes_100000orders_20250402_163423.txt  perf_test_summary_5nodes_100000orders_20250402_164106.txt
trading/src/: cluster.rs  lib.rs  main.rs  oms.md
trading/tests/: api_gateway_test.rs  cluster_performance_test.rs  fault_recovery_test.rs  performance_test.rs
(+391 files in other folders)
