[workspace]
resolver = "2"
members = [
    "actix",
    "actix-broker",
    "actix-derive",
    "actix-cluster",
    "dataflare",
    "dataflare/core",
    "dataflare/runtime",
    "dataflare/connector",
    "dataflare/processor",
    "dataflare/plugin",
    "dataflare/state",
    "dataflare/edge",
    "dataflare/cloud",
    "dataflare/cli",
    "examples/chat_system",
    "examples/task_processor",
    "examples/http_api",
    "examples/file_sync",
    "examples/distributed_benchmark",
    "trading",
]

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/actix/actix"
edition = "2021"
rust-version = "1.75"

[patch.crates-io]
actix = { path = "actix" }
actix-broker = { path = "actix-broker" }
actix_derive = { path = "actix-derive" }
actix-cluster = { path = "actix-cluster" }
dataflare = { path = "dataflare" }
dataflare-core = { path = "dataflare/core" }
dataflare-runtime = { path = "dataflare/runtime" }
dataflare-connector = { path = "dataflare/connector" }
dataflare-processor = { path = "dataflare/processor" }
dataflare-plugin = { path = "dataflare/plugin" }
dataflare-state = { path = "dataflare/state" }
dataflare-edge = { path = "dataflare/edge" }
dataflare-cloud = { path = "dataflare/cloud" }
dataflare-cli = { path = "dataflare/cli" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
