[package]
name = "dataflare-plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin system for DataFlare data integration framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actix/actix"

[dependencies]
dataflare-core = { path = "../dataflare-core" }
actix = { path = "../actix" }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.56"
anyhow = "1.0.93"
log = "0.4.20"
async-trait = "0.1.77"
wasmtime = "32.0.0"
wasm-bindgen = "0.2.100"
wat = "1.228.0"
serde_bytes = "0.11.14"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
mockall = "0.12.1"
tokio-test = "0.4.3"
