[package]
name = "dataflare"
version = "0.1.0"
edition = "2021"
description = "DataFlare - Modern data pipeline framework"
authors = ["DataFlare Team <team@dataflare.io>"]

[dependencies]
dataflare-core = { path = "core" }
dataflare-runtime = { path = "runtime" }
dataflare-connector = { path = "connector" }
dataflare-processor = { path = "processor" }
dataflare-plugin = { path = "plugin" }
dataflare-cli = { path = "cli" }

actix = "0.13"
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"

