[package]
name = "dataflare-benchmark"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "batch_benchmark"
path = "src/batch_benchmark.rs" 