[package]
name = "standalone_bench"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
dataflare-core = { path = "../dataflare/core" }
dataflare-connector = { path = "../dataflare/connector" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
futures = "0.3" 