[package]
name = "trading"
version = "0.1.0"
edition = "2021"
authors = ["Trading System Team"]
description = "A distributed trading system"

[dependencies]
# 使用crates.io的依赖
actix = "0.13.0"
actix-rt = "2.8.0"
actix-web = "4.3"
actix-cluster = { path = "../actix-cluster" }

# 其他依赖
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.40"
anyhow = "1.0.70"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
bincode = "1.3.3"
rand = "0.8.5"
tracing = "0.1.37"
async-trait = "0.1.68"
# 用于API服务器的依赖
clap = "3.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
