[package]
name = "dataflare-cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for DataFlare"
authors = ["DataFlare Team <team@dataflare.io>"]

[dependencies]
# Core DataFlare components
dataflare-core = { path = "../core" }
dataflare-runtime = { path = "../runtime" }
dataflare-connector = { path = "../connector" }
dataflare-processor = { path = "../processor" }
dataflare-plugin = { path = "../plugin" }
dataflare-state = { path = "../state" }

# Actix依赖
actix = { path = "../../actix" }

# Other dependencies
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.27"
thiserror = "1.0.56"
anyhow = "1.0.93"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1.77"
tempfile = "3.8.1"
# dataflare = { version = "0.1.0", path = "../" }

[[bin]]
name = "dataflare"
path = "src/main.rs"
