[package]
name = "dataflare-connector"
version = "0.1.0"
edition = "2021"
description = "Connector system for DataFlare data integration framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actix/actix"

[dependencies]
dataflare-core = { path = "../core" }
actix = "0.13"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
mongodb = { version = "2.7.1", features = ["bson-chrono-0_4"] }
csv = "1.3.0"
futures = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.56"
anyhow = "1.0.93"
log = "0.4.20"
async-trait = "0.1.77"
chrono = { version = "=0.4.39", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
mockall = "0.12.1"
tokio-test = "0.4.3"
