[package]
name = "dataflare-core"
version = "0.1.0"
edition = "2021"
description = "Core components for DataFlare data integration framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actix/actix"

[dependencies]
actix = { path = "../../actix" }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.56"
anyhow = "1.0.93"
log = "0.4.20"
env_logger = "0.10.1"
async-trait = "0.1.77"
chrono = { version = "=0.4.39", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
lazy_static = "1.4.0"
num_cpus = "1.16.0"
wasmtime = { version = "32.0.0", optional = true }
tempfile = "3.19.1"

[features]
default = []
wasm = ["wasmtime"]

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
mockall = "0.12.1"
tokio-test = "0.4.3"
