[package]
name = "dataflare-edge"
version = "0.1.0"
edition = "2021"
description = "Edge mode support for DataFlare data integration framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actix/actix"

[dependencies]
dataflare-core = { path = "../core" }
dataflare-runtime = { path = "../runtime" }
dataflare-connector = { path = "../connector" }
dataflare-processor = { path = "../processor" }
dataflare-plugin = { path = "../plugin" }
dataflare-state = { path = "../state" }
actix = { path = "../../actix" }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.56"
anyhow = "1.0.93"
log = "0.4.20"
async-trait = "0.1.77"
num_cpus = "1.16.0"
rand = "0.8.5"
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
mockall = "0.12.1"
tokio-test = "0.4.3"
