[package]
name = "dataflare-processor"
version = "0.1.0"
edition = "2021"
description = "Processor system for DataFlare data integration framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actix/actix"

[dependencies]
dataflare-core = { path = "../core" }
actix = { path = "../../actix" }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.56"
anyhow = "1.0.93"
log = "0.4.20"
async-trait = "0.1.77"
chrono = { version = "=0.4.39", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
lazy_static = "1.4.0"
lomusai_core = { path = "../../lumos.ai/lomusai_core" }

# VRL integration for DTL
vrl = { version = "0.24", features = ["stdlib"] }
ordered-float = "4.0"
rand = "0.8"

# WASM plugin system dependencies
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
dataflare-enterprise = { path = "../wasm", optional = true }

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
mockall = "0.12.1"
tokio-test = "0.4.3"

[features]
default = []
wasm = ["dataflare-enterprise"]
