[package]
name = "dataflare-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime engine for DataFlare data integration framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actix/actix"

[dependencies]
dataflare-core = { path = "../core" }
dataflare-connector = { path = "../connector" }
dataflare-processor = { path = "../processor" }
dataflare-plugin = { path = "../plugin" }
actix = "0.13"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.56"
serde_yaml = "0.9.27"
async-trait = "0.1.77"
petgraph = "0.6.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
actix-rt = "2.8"


[features]
default = ["with-connectors", "with-processors"]
with-connectors = []
with-processors = []
full = ["with-connectors", "with-processors"]

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
mockall = "0.12.1"
tokio-test = "0.4.3"
