[package]
name = "dataflare-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime component for DataFlare data pipeline framework"
authors = ["DataFlare Team <team@dataflare.io>"]

[dependencies]
actix = { path = "../../actix" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
petgraph = "0.6"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
rand = "0.8"
async-trait = "0.1"
dataflare-core = { path = "../core" }
dataflare-processor = { path = "../processor" }
dataflare-connector = { path = "../connector" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
rand = "0.8"
dotenv = "0.15"
test-log = "0.2"
env_logger = "0.10"
actix-rt = "2.8"
tempfile = "3.0"

[[bench]]
name = "actor_bench"
harness = false
