[package]
name = "dataflare-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM plugin system for DataFlare - supports all DSL components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dataflare/dataflare"
keywords = ["wasm", "plugin", "data-integration", "etl"]
categories = ["data-structures", "web-programming"]

[dependencies]
# Core dependencies
dataflare-core = { path = "../core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM runtime (using wasmtime for production)
wasmtime = { version = "33.0", features = ["async", "component-model"], optional = true }
wasmtime-wasi = { version = "33.0", optional = true }

# WIT support
wit-bindgen = { version = "0.33.0", optional = true }
wit-parser = { version = "0.231.0", optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"

# Security and sandboxing
cap-std = "3.0"

# Authentication and encryption
jsonwebtoken = "9.0"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
fastrand = "2.0"
futures = "0.3"

tempfile = "3.0"

[[bench]]
name = "wasm_performance"
harness = false

[features]
default = ["wasmtime-runtime", "wit-support"]
wasmtime-runtime = ["wasmtime", "wasmtime-wasi"]
wit-support = ["wit-bindgen", "wit-parser"]
mock-runtime = []

# 示例文件将在后续添加
