[package]
name = "json-transformer-plugin"
version = "1.0.0"
edition = "2021"
description = "DataFlare JSON transformation WASM plugin"
authors = ["DataFlare Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM runtime
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DataFlare plugin interface
dataflare-wasm = { path = "../../../dataflare/wasm" }

# JSON processing
jsonpath_lib = "0.3"

# Logging
log = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
